--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
    
     <main>
-        sectio.section-1
+        <section></section>.section-1
     </main>
     <footer>footer</footer>
 </body>
